# llm-stress-test

./: .gitignore  README.md  collect_host_info.py  probe_model.py  pyproject.toml  run_full_benchmark.py  test_llama_server.py
config/: deepseek-v3.2-llama-server.yaml  example.yaml  qwen3-coder-local.yaml
datasets/: download_longalpaca.py
docs/spec-reviews/: 2026-04-10_091933_review.2026-04-10-llm-stress-test-design.md  2026-04-13_091353_review.2026-04-13-full-benchmark-design.md
docs/superpowers/plans/: 2026-04-10-llm-stress-test.md  2026-04-13-full-benchmark.md
docs/superpowers/specs/: 2026-04-10-llm-stress-test-design.md  2026-04-13-full-benchmark-design.md
src/llm_stress_test/: __init__.py  __main__.py  _yaml.py  benchmark.py  cli.py  config.py  dataset.py  metrics.py  models.py  orchestrator.py
src/llm_stress_test/engine/: __init__.py  base.py  evalscope.py  native.py
src/llm_stress_test/gui/: app.py
src/llm_stress_test/report/: chart.py  exporter.py  html.py
tests/: test_cli.py  test_config.py  test_dataset.py  test_evalscope_engine.py  test_integration.py  test_metrics.py  test_models.py  test_native_engine.py  test_orchestrator.py  test_report.py
